@@ -17,7 +17,7 @@
 <module>
     <manifestVersion>1.0.0</manifestVersion>
     <symbolicName>beam-pixel-extraction</symbolicName>
-    <version>1.3</version>
+    <version>1.3.1</version>
     <name>BEAM Pixel Extraction Tool</name>
 
     <description>The BEAM Pixel Extraction Tool can be used to generate a CSV file from a given pixel location
@@ -26,6 +26,8 @@
 
     <changelog>
         <![CDATA[
+               <b>Changes from 1.2 to 1.3.1</b><br/>
+               [BEAM-1459] Allow aggregating pixel values even if not all pixels of the window are valid<br/>
                <b>Changes from 1.2 to 1.3</b><br/>
                [BEAM-1471] The time extraction from file name should support DAY_OF_YEAR<br/>
                [BEAM-1470] It is not correctly detected if measurements have been extracted<br/>
